--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,8 @@
 body{
     margin:0px;
     overflow:auto !important;
+    background-image:url("/BackGround.png") ;
+    
+    background-size: cover;
+    background-repeat: no-repeat;
 }
